change meta seo

--- a/cleaning-companies/index.html
+++ b/cleaning-companies/index.html
@@ -8,13 +8,13 @@
     <meta name="keywords" content="شركات التنظيف, نقاء كلين, التنظيف في السعودية, شركة تنظيف جدة, خدمات النظافة">
     <meta name="author" content="نقاء كلين">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://naqaa-clean.com/">
+    <link rel="canonical" href="https://gooldenmoon.com/cleaning-companies/index.html">
     
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ar_AR">
     <meta property="og:title" content="شركات التنظيف في السعودية: أهمية النظافة وتأثيرها على المجتمع والاقتصاد">
     <meta property="og:description" content="دليل شامل حول أهمية شركات التنظيف في السعودية مع التركيز على شركة نقاء كلين">
-    <meta property="og:url" content="https://naqaa-clean.com/">
+    <meta property="og:url" content="https://gooldenmoon.com/cleaning-companies/index.html">
     <meta property="og:site_name" content="نقاء كلين">
     
     <meta name="twitter:card" content="summary_large_image">
