--- a/cleaning-services/index.html
+++ b/cleaning-services/index.html
@@ -6,24 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>خدمات التنظيف في الرياض - دليلك الشامل للنظافة المهنية في المملكة العربية السعودية </title>
    <meta http-equiv="Content-Language" content="ar">
-
-    <!-- وصف SEO -->
+    <!-- Meta SEO -->
     <meta name="description" content="اكتشف أفضل خدمات التنظيف في الرياض مع دليل شامل للنظافة المهنية، يشمل تنظيف المنازل، المكاتب، والمباني بطرق آمنة وصديقة للبيئة في المملكة العربية السعودية.">
     <meta name="keywords" content="خدمات التنظيف في الرياض, شركات تنظيف بالرياض, تنظيف المنازل, التنظيف الاحترافي, النظافة المهنية, دليل التنظيف, المملكة العربية السعودية, تنظيف المكاتب, خدمات النظافة, بيئة نظيفة">
     <meta name="author" content="دليل خدمات التنظيف في السعودية">
-
-    <!-- فهرسة محركات البحث -->
+    <meta property="og:url" content="https://gooldenmoon.com/cleaning-services/index.html">
     <meta name="robots" content="index, follow">
-
+    <link rel="canonical" href="https://gooldenmoon.com/cleaning-services/index.html">
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.example.com/cleaning-services-riyadh">
-
+    <link rel="canonical" href="https://gooldenmoon.com/cleaning-services/index.html">
     <!-- Open Graph لوسائل التواصل (Facebook / LinkedIn) -->
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ar_AR">
     <meta property="og:title" content="خدمات التنظيف في الرياض - دليلك الشامل للنظافة المهنية في المملكة العربية السعودية">
     <meta property="og:description" content="تعرف على أفضل خدمات التنظيف في الرياض مع دليل مفصل حول النظافة الاحترافية للمنازل والشركات بأساليب حديثة وصديقة للبيئة.">
-    <meta property="og:url" content="https://www.example.com/cleaning-services-riyadh">
+    <meta property="og:url" content="https://gooldenmoon.com/cleaning-services/index.html">
     <meta property="og:image" content="https://www.example.com/images/cleaning-riyadh-cover.jpg">
     <meta property="og:site_name" content="دليل التنظيف بالرياض">
 
