--- a/cleanliness-in-the-Gulf/index.html
+++ b/cleanliness-in-the-Gulf/index.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>النظافة في الخليج العربي: دليل شامل مع خدمات فريش كلين</title>
+    <!-- Meta SEO -->
+    <meta name="description" content="اكتشف دليل شامل لأفضل خدمات النظافة في الخليج العربي مع شركة فريش كلين، حلول مبتكرة وتقنيات متطورة تضمن نظافة مثالية للمنازل والمكاتب." />
+    <meta name="keywords" content="خدمات النظافة في الخليج, شركات تنظيف الخليج, تنظيف المنازل الخليج, شركة فريش كلين, خدمات تنظيف متقدمة, تنظيف المكاتب الخليج" />
+    <meta name="author" content="شركة فريش كلين" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://gooldenmoon.com/cleanliness-in-the-Gulf/index.html">
+    
+
+    <!-- Open Graph (للفيسبوك وLinkedIn) -->
+    <meta property="og:title" content="النظافة في الخليج العربي: دليل شامل مع خدمات فريش كلين" />
+    <meta property="og:description" content="تعرف على أفضل شركات تنظيف المنازل والمكاتب في الخليج العربي مع شركة فريش كلين، خدمات تنظيف متخصصة لجميع احتياجاتك." />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://gooldenmoon.com/cleanliness-in-the-Gulf/index.html" />
+    <meta property="og:image" content="https://gooldenmoon.com/images/fresh-clean-services-gulf.jpg" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="النظافة في الخليج العربي: دليل شامل مع خدمات فريش كلين" />
+    <meta name="twitter:description" content="اكتشف خدمات النظافة الرائدة في الخليج العربي مع شركة فريش كلين، حلول متكاملة للمنازل والشركات." />
+    <meta name="twitter:image" content="https://yourwebsite.com/images/fresh-clean-services-gulf.jpg" />
+
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
