--- a/comprehensive-transportation-solutions/index.html
+++ b/comprehensive-transportation-solutions/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الحلول الشاملة لعملية نقل العفش بالكويت ومدن الكويت</title>
+    <!-- Meta SEO -->
+    <meta name="description" content="استكشف أفضل الحلول والخدمات المتخصصة في نقل العفش بالكويت ومدنها مع نصائح لضمان سرعة، أمان واحترافية في جميع مراحل النقل." />
+    <meta name="keywords" content="نقل عفش الكويت, شركات نقل عفش الكويت, نقل الأثاث بالكويت, خدمات نقل العفش, نقل عفش الكويت العاصمة, نقل أثاث الأحمدي, نقل عفش حولي, نقل أثاث الفروانية" />
+    <meta name="author" content="شركة نقل عفش الكويت" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://gooldenmoon.com/comprehensive-transportation-solutions/index.html">
+
+
+    <!-- Open Graph (للفيسبوك وLinkedIn) -->
+    <meta property="og:title" content="الحلول الشاملة لعملية نقل العفش بالكويت ومدن الكويت" />
+    <meta property="og:description" content="اكتشف جميع خدمات ونصائح نقل العفش بالكويت، مع أفضل الشركات المتخصصة لضمان عملية نقل سلسة وآمنة." />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://gooldenmoon.com/comprehensive-transportation-solutions/index.html" />
+    <meta property="og:image" content="https://yourwebsite.com/images/moving-services-kuwait.jpg" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="الحلول الشاملة لعملية نقل العفش بالكويت ومدن الكويت" />
+    <meta name="twitter:description" content="تعرف على أفضل خدمات نقل العفش بالكويت مع حلول فعالة وآمنة في جميع مدن الكويت." />
+    <meta name="twitter:image" content="https://yourwebsite.com/images/moving-services-kuwait.jpg" />
     
     <!-- Bootstrap CSS RTL -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
