--- a/fire-fighting/index.html
+++ b/fire-fighting/index.html
@@ -20,15 +20,21 @@
     <meta property="og:title" content="أهمية مكافحة الحرائق: دليل شامل للسلامة والوقاية">
     <meta property="og:description" content="دليل شامل عن أهمية مكافحة الحرائق وكيفية الوقاية منها بطرق فعالة لضمان السلامة في جميع الأماكن.">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://example.com/fire-safety-guide"> 
+    <meta property="og:url" content="https://gooldenmoon.com/fire-fighting/index.html"> 
     <meta property="og:image" content="https://example.com/images/fire-safety.jpg"> 
+    <link rel="canonical" href="https://gooldenmoon.com/fire-fighting/index.html">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="أهمية مكافحة الحرائق: دليل شامل للسلامة والوقاية">
     <meta name="twitter:description" content="تعرف على أهمية مكافحة الحرائق وخطط الوقاية لحماية الأرواح والممتلكات.">
     <meta name="twitter:image" content="https://example.com/images/fire-safety.jpg">    
-        <script src="https://cdn.tailwindcss.com"></script>
+   
+    
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -45,11 +51,6 @@
             }
         }
     </script>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/style.css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
-
    <style>
             @font-face {
             font-family: "Lama-sans";
