--- a/furniture-arrangement/index.html
+++ b/furniture-arrangement/index.html
@@ -14,16 +14,16 @@
     <meta name="robots" content="index, follow">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://meuvex-furniture.com/furniture-arrangement-guide">
+    <link rel="canonical" href="https://gooldenmoon.com/furniture-arrangement/index.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="article">
     <meta property="og:locale" content="ar_AR">
     <meta property="og:title" content="دليل شامل: أفضل طرق ترتيب الأثاث في المنزل الجديد - التأثير البيئي والتنمية المستدامة">
     <meta property="og:description" content="تعرف على أحدث طرق ترتيب الأثاث بطريقة عملية ومستدامة مع الحفاظ على البيئة وتعزيز الراحة في المنزل الجديد.">
-    <meta property="og:url" content="https://meuvex-furniture.com/furniture-arrangement-guide">
+    <meta property="og:url" content="https://gooldenmoon.com/furniture-arrangement/index.html">
     <meta property="og:site_name" content="Meuvex Furniture">
-
+    
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="أفضل طرق ترتيب الأثاث في المنزل الجديد - التأثير البيئي والتنمية المستدامة">
