--- a/furniture-in-the-gulf/index.html
+++ b/furniture-in-the-gulf/index.html
@@ -9,15 +9,14 @@
     <meta name="keywords" content="نقل الأثاث, شركات نقل الأثاث, نقل أثاث الخليج, نقل عفش, خدمات النقل, شركات متخصصة في الخليج, دليل نقل الأثاث" />
     <meta name="author" content="Your Company Name" />
     <meta name="robots" content="index, follow" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://gooldenmoon.com/furniture-in-the-gulf/index.html">
 
     <!-- Meta Open Graph (للفيسبوك ووسائل التواصل) -->
     <meta property="og:title" content="نقل الأثاث في منطقة الخليج: دليل شامل وأهمية الشركات المتخصصة" />
     <meta property="og:description" content="دليل شامل عن خدمات نقل الأثاث في الخليج وأهمية الاعتماد على الشركات المتخصصة لتحقيق نقل آمن وسريع بدون عناء." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://yourwebsite.com/gulf-furniture-moving-guide" />
-    <meta property="og:image" content="https://yourwebsite.com/images/furniture-moving-guide.jpg" />
+    <meta property="og:url" content="https://gooldenmoon.com/furniture-in-the-gulf" />
+    <meta property="og:image" content="https://yourwebsite.com/images/furniture-moving-guide.jpg/index.html" />
 
     <!-- Meta Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
