--- a/furniture-moving-companies/index.html
+++ b/furniture-moving-companies/index.html
@@ -9,14 +9,13 @@
     <meta name="keywords" content="نقل أثاث الكويت, شركات نقل الأثاث في الكويت, شركات نقل موثوقة, نقل عفش الكويت, دليل نقل الأثاث, شركات نقل أثاث مضمونة" />
     <meta name="author" content="Your Company Name" />
     <meta name="robots" content="index, follow" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://gooldenmoon.com/furniture-moving-companies/index.html">
 
     <!-- Meta Open Graph (لفيسبوك ووسائل التواصل) -->
     <meta property="og:title" content="دليل شامل لاختيار شركة نقل أثاث موثوقة في الكويت - أفضل شركات النقل المضمونة" />
     <meta property="og:description" content="دليلك المتكامل لاختيار أفضل شركة نقل أثاث في الكويت مع نصائح ذهبية وقائمة بأفضل الشركات المضمونة." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://yourwebsite.com/kuwait-furniture-moving-guide" />
+    <meta property="og:url" content="https://gooldenmoon.com/furniture-moving-companies/index.html" />
     <meta property="og:image" content="https://yourwebsite.com/images/kuwait-moving-guide.jpg" />
 
     <!-- Meta Twitter Cards -->
