--- a/furniture-moving-in-the-Gulf/index.html
+++ b/furniture-moving-in-the-Gulf/index.html
@@ -8,14 +8,13 @@
     <meta name="keywords" content="نقل العفش في الخليج, خدمات نقل الأثاث, Exo Move, شركات نقل العفش, نقل أثاث الخليج, خدمات النقل المتميزة" />
     <meta name="author" content="Exo Move" />
     <meta name="robots" content="index, follow" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://gooldenmoon.com/furniture-moving-in-the-Gulf/index.html">
 
     <!-- Meta Open Graph (لفيسبوك ووسائل التواصل) -->
     <meta property="og:title" content="دليل شامل لنقل العفش في الخليج - خدمات Exo Move المتميزة" />
     <meta property="og:description" content="اكتشف خدمات Exo Move المتميزة في نقل العفش داخل الخليج مع نصائح ودليل شامل لضمان تجربة نقل سهلة وآمنة." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://yourwebsite.com/gulf-furniture-moving-guide" />
+    <meta property="og:url" content="https://gooldenmoon.com/furniture-moving-in-the-Gulf/index.html" />
     <meta property="og:image" content="https://yourwebsite.com/images/exo-move-furniture-guide.jpg" />
 
     <!-- Meta Twitter Cards -->
