--- a/our-services/index.html
+++ b/our-services/index.html
@@ -4,26 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>نقل الأثاث والعفش في الرياض - خدمة احترافية مع ضمان الأمان</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="أفضل خدمات نقل الأثاث والعفش في الرياض مع تغليف احترافي، نقل آمن، أسعار تنافسية، وضمان حماية كاملة لممتلكاتك طوال عملية النقل.">
     <meta name="keywords" content="نقل عفش, نقل أثاث, نقل الأثاث في الرياض, خدمات نقل العفش, تغليف الأثاث, شركات نقل عفش بالرياض, نقل أثاث آمن, أسعار نقل العفش بالرياض">
     <meta name="author" content="خدمات الرياض لنقل العفش">
     <meta name="robots" content="index, follow">
-
+   <link rel="canonical" href="https://gooldenmoon.com/our-services/index.html">
     <!-- Open Graph / Facebook / WhatsApp / Telegram -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-website.com">
+    <meta property="og:url" content="https://gooldenmoon.com/our-services/index.html">
     <meta property="og:title" content="نقل الأثاث والعفش في الرياض - خدمة احترافية مع ضمان الأمان">
     <meta property="og:description" content="احصل على خدمة نقل الأثاث والعفش في الرياض مع تغليف احترافي ونقل آمن، أسعار مناسبة وخدمة عملاء راقية.">
-    <meta property="og:image" content="https://your-website.com/images/og-image.jpg">
+    
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://your-website.com">
+    <meta name="twitter:url" content="https://gooldenmoon.com/our-services/index.html">
     <meta name="twitter:title" content="نقل الأثاث والعفش في الرياض - خدمة احترافية مع ضمان الأمان">
     <meta name="twitter:description" content="خدمة متخصصة في نقل الأثاث والعفش بالرياض مع تغليف دقيق ونقل آمن، أسعار مميزة وضمان راحة العملاء.">
-    <meta name="twitter:image" content="https://your-website.com/images/twitter-image.jpg">
+    
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
