--- a/cleaning-methods-and-services/index.html
+++ b/cleaning-methods-and-services/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="دليل شامل لأساليب وخدمات التنظيف من شركة لمعة للنظافة - أفضل شركة تنظيف في الرياض. اكتشف الحلول المتكاملة والأساليب الحديثة للحصول على بيئة نظيفة وصحية.">
     <meta name="keywords" content="شركة تنظيف، الرياض، تنظيف منازل، شركة نظافة، خدمات تنظيف، تنظيف بالبخار، عمالة تنظيف، شركة لمعة">
     <meta name="author" content="شركة لمعة للنظافة">
-
+    <link rel="canonical" href="https://gooldenmoon.com/cleaning-methods-and-services/index.html">
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="دليل شامل لأساليب وخدمات التنظيف - شركة لمعة للنظافة">
     <meta property="og:description" content="دليل كامل يقدم حلولاً متكاملة للتنظيف من أفضل شركة نظافة في الرياض">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://getlamaaclean.com/">
+    <meta property="og:url" content="https://gooldenmoon.com/cleaning-methods-and-services/index.html">
     <meta property="og:image" content="https://getlamaaclean.com/cover.png">
 
     <!-- Twitter Meta Tags -->
@@ -23,8 +23,7 @@
     <meta name="twitter:description" content="خدمات تنظيف احترافية ومعتمدة في الرياض - دليل شامل لأساليب التنظيف الحديثة">
     <meta property="twitter:image" content="https://getlamaaclean.com/cover.png">
 
-    <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+   
     
     <!-- Bootstrap RTL CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
