--- a/cleaning-services/index.html
+++ b/cleaning-services/index.html
@@ -38,6 +38,9 @@
     <!-- Tailwind CSS footer -->
      <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
      <link rel="stylesheet" href="./style.css">
+     <style>
+        
+     </style>
    
 </head>
 <body>
