--- a/our-services/index.html
+++ b/our-services/index.html
@@ -18,7 +18,7 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://gooldenmoon.com/our-services/index.html">
+    <meta name="twitter:url" content=" our-services/index.html">
     <meta name="twitter:title" content="نقل الأثاث والعفش في الرياض - خدمة احترافية مع ضمان الأمان">
     <meta name="twitter:description" content="خدمة متخصصة في نقل الأثاث والعفش بالرياض مع تغليف دقيق ونقل آمن، أسعار مميزة وضمان راحة العملاء.">
     
@@ -54,7 +54,7 @@
     <style>
            @font-face {
             font-family: "Lama-sans";
-            src: url("../assets/font/LamaSans-Black.woff") format("woff");
+            src: url("../assets/font/ArbFONTS-LamaSans-Regular.ttf") format("woff");
         }
     </style>
     
