--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                     <!-- الصورة -->
                     <div class="order-2 lg:order-1">
                         <div class="relative overflow-hidden rounded-2xl shadow-2xl group">
-                            <img src="	https://nazretelebdaa.com/assets/img/Artboard3.webp" 
+                            <img src="	https://naqaa-clean.com/blog/logo.webp" 
                                  alt="أنظمة السلامة ومكافحة الحرائق" 
                                  class="w-full h-80 object-cover transition-transform duration-500 group-hover:scale-110">
                             <div class="absolute inset-0 bg-gradient-to-t from-primary/80 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
