--- a/air-conditioner-maintenance/index.html
+++ b/air-conditioner-maintenance/index.html
@@ -507,7 +507,7 @@
                         </div>
                         <h3 class="text-2xl font-bold text-gray-800">مكيفات السبليت</h3>
                     </div>
-                    <img src="../assets/images/istockphoto-519620696-612x612.jpg" alt="مكيف سبليت" class="w-full h-48 object-cover rounded-lg mb-6">
+                    <img src="../assets/images/Split-air-conditioners.webp" alt="مكيف سبليت" class="w-full h-48 object-cover rounded-lg mb-6">
                     <p class="text-gray-700 mb-6">
                         تُعد مكيفات السبليت من أكثر الأنواع شيوعاً في المنازل والمكاتب الحديثة. تتكون من وحدتين منفصلتين: وحدة داخلية ووحدة خارجية.
                     </p>
@@ -541,7 +541,7 @@
                         </div>
                         <h3 class="text-2xl font-bold text-gray-800">مكيفات الشباك</h3>
                     </div>
-                    <img src="../assets/images/istockphoto-185001395-612x612.jpg" alt="مكيف شباك" class="w-full h-48 object-cover rounded-lg mb-6">
+                    <img src="../assets/images/Window-air-conditioners.webp" alt="مكيف شباك" class="w-full h-48 object-cover rounded-lg mb-6">
                     <p class="text-gray-700 mb-6">
                         تُعد مكيفات الشباك من أقدم وأبسط أنواع المكيفات وأكثرها شيوعاً في المنازل الصغيرة والغرف الفردية.
                     </p>
@@ -575,7 +575,7 @@
                         </div>
                         <h3 class="text-2xl font-bold text-gray-800">المكيفات المركزية</h3>
                     </div>
-                    <img src="../assets/images/istockphoto-1171353535-612x612.jpg" alt="مكيف مركزي" class="w-full h-48 object-cover rounded-lg mb-6">
+                    <img src="../assets/images/Central-air-conditioners.webp" alt="مكيف مركزي" class="w-full h-48 object-cover rounded-lg mb-6">
                     <p class="text-gray-700 mb-6">
                         تُستخدم المكيفات المركزية لتبريد مبنى بأكمله أو عدة غرف في وقت واحد عبر شبكة من مجاري الهواء.
                     </p>
@@ -609,7 +609,7 @@
                         </div>
                         <h3 class="text-2xl font-bold text-gray-800">المكيفات المتنقلة</h3>
                     </div>
-                    <img src="../assets/images/istockphoto-1581204508-612x612.jpg" alt="مكيف متنقل" class="w-full h-48 object-cover rounded-lg mb-6">
+                    <img src="../assets/images/Mobile-air-conditioners.webp" alt="مكيف متنقل" class="w-full h-48 object-cover rounded-lg mb-6">
                     <p class="text-gray-700 mb-6">
                         تُعد المكيفات المتنقلة حلاً مؤقتاً ومناسباً لتبريد غرفة واحدة ويمكن نقلها بسهولة بين الغرف.
                     </p>
