add meta in index.html

--- a/index.html
+++ b/index.html
@@ -3,28 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نقل الأثاث والعفش في الرياض - خدمة احترافية مع ضمان الأمان</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="أفضل خدمات نقل الأثاث والعفش في الرياض مع تغليف احترافي، نقل آمن، أسعار تنافسية، وضمان حماية كاملة لممتلكاتك طوال عملية النقل.">
-    <meta name="keywords" content="نقل عفش, نقل أثاث, نقل الأثاث في الرياض, خدمات نقل العفش, تغليف الأثاث, شركات نقل عفش بالرياض, نقل أثاث آمن, أسعار نقل العفش بالرياض">
-    <meta name="author" content="خدمات الرياض لنقل العفش">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://gooldenmoon.com/index.html">
+   <title>خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر</title>
 
-    <!-- Open Graph / Facebook / WhatsApp / Telegram -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-website.com">
-    <meta property="og:title" content="نقل الأثاث والعفش في الرياض - خدمة احترافية مع ضمان الأمان">
-    <meta property="og:description" content="احصل على خدمة نقل الأثاث والعفش في الرياض مع تغليف احترافي ونقل آمن، أسعار مناسبة وخدمة عملاء راقية.">
-    <meta property="og:image" content="https://your-website.com/images/og-image.jpg">
+   <!-- Basic Meta Tags -->
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://your-website.com">
-    <meta name="twitter:title" content="نقل الأثاث والعفش في الرياض - خدمة احترافية مع ضمان الأمان">
-    <meta name="twitter:description" content="خدمة متخصصة في نقل الأثاث والعفش بالرياض مع تغليف دقيق ونقل آمن، أسعار مميزة وضمان راحة العملاء.">
-    <meta name="twitter:image" content="https://your-website.com/images/twitter-image.jpg">
+<meta name="description" content="خدمات الخليج هي منصتك الشاملة للحصول على أفضل خدمات نقل الأثاث، التنظيف، الصيانة، والتكييف في السعودية ودول الخليج بجودة عالية وأسعار تنافسية.">
+
+<!-- SEO Meta Tags -->
+<meta name="keywords" content="خدمات الخليج, نقل أثاث, تنظيف منازل, صيانة منازل, شركات تنظيف, صيانة كهرباء, نقل عفش, خدمات تكييف, خدمات منزلية في الخليج, خدمات بالسعودية, شركات خدمات">
+<meta name="author" content="خدمات الخليج">
+ <link rel="canonical" href="https://gooldenmoon.com/index.html">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر">
+<meta property="og:description" content="منصة خدمات متكاملة تغطي السعودية ودول الخليج، تشمل خدمات النقل والتنظيف والصيانة والتكييف والمزيد.">
+<meta property="og:image" content="https://www.example.com/images/og-image.jpg"> <!-- ضع رابط صورة جذابة -->
+<meta property="og:url" content="https://gooldenmoon.com/index.html"> <!-- عدل برابط موقعك -->
+<meta property="og:site_name" content="خدمات الخليج">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر">
+<meta name="twitter:description" content="كل خدماتك المنزلية والتجارية تجدها هنا - سرعة، جودة، وأسعار تنافسية تغطي كافة مدن الخليج.">
+<meta name="twitter:image" content="https://www.example.com/images/twitter-card.jpg"> <!-- عدل بالرابط المناسب -->
+
+<!-- Favicon -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
