--- a/furniture-moving-in-the-Gulf/index.html
+++ b/furniture-moving-in-the-Gulf/index.html
@@ -35,7 +35,7 @@
         }
           @font-face {
             font-family: "Lama-sans";
-            src: url("../assets/font/LamaSans-Black.woff") format("woff");
+            src: url("../assets/font/ArbFONTS-LamaSans-Regular.ttf") format("woff");
           
 
         }
