change meta in pages

--- a/air-conditioner-maintenance/index.html
+++ b/air-conditioner-maintenance/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="صيانة المكيفات, تعديل المكيفات, آيرون كول, خدمات التكييف, تنظيف المكيفات, توفير الطاقة, صيانة تكييف الخليج" />
     <meta name="author" content="آيرون كول" />
     <meta name="robots" content="index, follow" />
-    <meta charset="UTF-8" />
+    <link rel="canonical" href="https://gooldenmoon.com/air-conditioner-maintenance/index.html">
 
 
     <!-- Meta Open Graph  -->
@@ -17,14 +17,14 @@
     <meta property="og:description" content="تعرف على خطوات صيانة وتعديل المكيفات مع آيرون كول، دليل احترافي لتحسين أداء أجهزة التكييف وتقليل استهلاك الكهرباء." />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://gooldenmoon.com/air-conditioner-maintenance/index.html" />
-    <meta property="og:image" content="https://yourwebsite.com/images/aircon-maintenance-guide.jpg" />
+    
 
     <!-- Meta Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="دليل شامل لصيانة وتعديل المكيفات - آيرون كول" />
     <meta name="twitter:description" content="كل ما تحتاج معرفته لصيانة وتعديل المكيفات مع آيرون كول، نصائح وتقنيات لضمان أداء تبريد مثالي." />
     <meta property="og:url" content="https://gooldenmoon.com/air-conditioner-maintenance/index.html" />
-    <meta name="twitter:image" content="https://yourwebsite.com/images/aircon-maintenance-guide.jpg" />
+
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./style.css">
