--- a/cleanliness-in-the-Gulf/index.html
+++ b/cleanliness-in-the-Gulf/index.html
@@ -17,13 +17,13 @@
     <meta property="og:description" content="تعرف على أفضل شركات تنظيف المنازل والمكاتب في الخليج العربي مع شركة فريش كلين، خدمات تنظيف متخصصة لجميع احتياجاتك." />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://gooldenmoon.com/cleanliness-in-the-Gulf/index.html" />
-    <meta property="og:image" content="https://gooldenmoon.com/images/fresh-clean-services-gulf.jpg" />
+    <link rel="canonical" href="https://gooldenmoon.com/cleanliness-in-the-Gulf/index.html">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="النظافة في الخليج العربي: دليل شامل مع خدمات فريش كلين" />
     <meta name="twitter:description" content="اكتشف خدمات النظافة الرائدة في الخليج العربي مع شركة فريش كلين، حلول متكاملة للمنازل والشركات." />
-    <meta name="twitter:image" content="https://yourwebsite.com/images/fresh-clean-services-gulf.jpg" />
+    
 
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
