--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر">
 <meta property="og:description" content="منصة خدمات متكاملة تغطي السعودية ودول الخليج، تشمل خدمات النقل والتنظيف والصيانة والتكييف والمزيد.">
-<meta property="og:image" content="https://www.example.com/images/og-image.jpg"> <!-- ضع رابط صورة جذابة -->
-<meta property="og:url" content="https://gooldenmoon.com/index.html"> <!-- عدل برابط موقعك -->
+<meta property="og:url" content="https://gooldenmoon.com/index.html"> 
 <meta property="og:site_name" content="خدمات الخليج">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر">
 <meta name="twitter:description" content="كل خدماتك المنزلية والتجارية تجدها هنا - سرعة، جودة، وأسعار تنافسية تغطي كافة مدن الخليج.">
-<meta name="twitter:image" content="https://www.example.com/images/twitter-card.jpg"> <!-- عدل بالرابط المناسب -->
+
 
 <!-- Favicon -->
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
