--- a/cleaning-companies/index.html
+++ b/cleaning-companies/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> شركات التنظيف في السعودية: أهمية النظافة وتأثيرها </title>
+    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
     <meta name="description" content="دليل شامل حول أهمية شركات التنظيف في السعودية مع التركيز على شركة نقاء كلين وخدماتها المتميزة في جدة">
     <meta name="keywords" content="شركات التنظيف, نقاء كلين, التنظيف في السعودية, شركة تنظيف جدة, خدمات النظافة">
     <meta name="author" content="نقاء كلين">
