--- a/cleanliness-in-the-Gulf/index.html
+++ b/cleanliness-in-the-Gulf/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>النظافة في الخليج العربي: دليل شامل مع خدمات فريش كلين</title>
+    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
     <!-- Meta SEO -->
     <meta name="description" content="اكتشف دليل شامل لأفضل خدمات النظافة في الخليج العربي مع شركة فريش كلين، حلول مبتكرة وتقنيات متطورة تضمن نظافة مثالية للمنازل والمكاتب." />
     <meta name="keywords" content="خدمات النظافة في الخليج, شركات تنظيف الخليج, تنظيف المنازل الخليج, شركة فريش كلين, خدمات تنظيف متقدمة, تنظيف المكاتب الخليج" />
