--- a/fire-fighting/index.html
+++ b/fire-fighting/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>أهمية مكافحة الحرائق: دليل شامل للسلامة والوقاية</title>
+    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
         <!-- وصف ميتا SEO -->
     <meta name="description" content="اكتشف أهمية مكافحة الحرائق وتعلم أفضل استراتيجيات الوقاية والسلامة لحماية الأرواح والممتلكات من الأخطار والحوادث. دليل شامل لمكافحة الحرائق.">
     <meta name="keywords" content="مكافحة الحرائق, الوقاية من الحرائق, أنظمة السلامة, دليل مكافحة الحرائق, سلامة المنشآت, طفايات الحريق, خطة الطوارئ">
