--- a/furniture-in-the-gulf/index.html
+++ b/furniture-in-the-gulf/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>نقل الأثاث في منطقة الخليج: دليل شامل وأهمية الشركات المتخصصة</title>
+    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
     <!-- Meta SEO الأساسية -->
     <meta name="description" content="اكتشف دليل شامل لخدمات نقل الأثاث في منطقة الخليج، وأهمية اختيار الشركات المتخصصة لتحقيق الأمان والسرعة والجودة في عمليات النقل." />
     <meta name="keywords" content="نقل الأثاث, شركات نقل الأثاث, نقل أثاث الخليج, نقل عفش, خدمات النقل, شركات متخصصة في الخليج, دليل نقل الأثاث" />
