--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر</title>
-
+   <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
    <!-- Basic Meta Tags -->
 
 <meta name="description" content="خدمات الخليج هي منصتك الشاملة للحصول على أفضل خدمات نقل الأثاث، التنظيف، الصيانة، والتكييف في السعودية ودول الخليج بجودة عالية وأسعار تنافسية.">
