--- a/air-conditioner-maintenance/index.html
+++ b/air-conditioner-maintenance/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دليل شامل لصيانة وتعديل المكيفات - آيرون كول</title>
+    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
     <!-- Meta SEO  -->
     <meta name="description" content="اكتشف دليل آيرون كول المتكامل لصيانة وتعديل المكيفات، مع نصائح احترافية للحفاظ على كفاءة التبريد وتوفير استهلاك الطاقة بأفضل الممارسات." />
     <meta name="keywords" content="صيانة المكيفات, تعديل المكيفات, آيرون كول, خدمات التكييف, تنظيف المكيفات, توفير الطاقة, صيانة تكييف الخليج" />
