--- a/cleaning-services/index.html
+++ b/cleaning-services/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>خدمات التنظيف في الرياض - دليلك الشامل للنظافة المهنية في المملكة العربية السعودية</title>
+    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
     <meta http-equiv="Content-Language" content="ar">
     
     <!-- Meta SEO -->
