--- a/comprehensive-transportation-solutions/index.html
+++ b/comprehensive-transportation-solutions/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الحلول الشاملة لعملية نقل العفش بالكويت ومدن الكويت</title>
+    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
     <!-- Meta SEO -->
     <meta name="description" content="استكشف أفضل الحلول والخدمات المتخصصة في نقل العفش بالكويت ومدنها مع نصائح لضمان سرعة، أمان واحترافية في جميع مراحل النقل." />
     <meta name="keywords" content="نقل عفش الكويت, شركات نقل عفش الكويت, نقل الأثاث بالكويت, خدمات نقل العفش, نقل عفش الكويت العاصمة, نقل أثاث الأحمدي, نقل عفش حولي, نقل أثاث الفروانية" />
