--- a/furniture-arrangement/index.html
+++ b/furniture-arrangement/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دليل شامل: أفضل طرق ترتيب الأثاث في المنزل الجديد - التأثير البيئي والتنمية المستدامة</title>
+    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
     
     <!-- وصف SEO -->
     <meta name="description" content="اكتشف أفضل الأساليب لترتيب الأثاث في المنزل الجديد مع مراعاة الجوانب البيئية والتنمية المستدامة. دليل متكامل لتحسين المساحة والراحة والمظهر الجمالي.">
