--- a/furniture-moving-companies/index.html
+++ b/furniture-moving-companies/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دليل شامل لاختيار شركة نقل أثاث موثوقة في الكويت - أفضل شركات النقل المضمونة</title>
+    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
     <!-- Meta SEO الأساسية -->
     <meta name="description" content="تعرف على دليل شامل لاختيار شركة نقل أثاث موثوقة في الكويت، مع قائمة بأفضل شركات النقل المضمونة التي تضمن لك سرعة وأمان وكفاءة في عملية النقل." />
     <meta name="keywords" content="نقل أثاث الكويت, شركات نقل الأثاث في الكويت, شركات نقل موثوقة, نقل عفش الكويت, دليل نقل الأثاث, شركات نقل أثاث مضمونة" />
