--- a/our-services/index.html
+++ b/our-services/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>نقل الأثاث والعفش في الرياض - خدمة احترافية مع ضمان الأمان</title>
+    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
     <meta name="description" content="أفضل خدمات نقل الأثاث والعفش في الرياض مع تغليف احترافي، نقل آمن، أسعار تنافسية، وضمان حماية كاملة لممتلكاتك طوال عملية النقل.">
     <meta name="keywords" content="نقل عفش, نقل أثاث, نقل الأثاث في الرياض, خدمات نقل العفش, تغليف الأثاث, شركات نقل عفش بالرياض, نقل أثاث آمن, أسعار نقل العفش بالرياض">
     <meta name="author" content="خدمات الرياض لنقل العفش">
