Edit the page to improve SEO

--- a/furniture-in-the-gulf/index.html
+++ b/furniture-in-the-gulf/index.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://gooldenmoon.com/furniture-in-the-gulf/index.html">
 
-    <!-- Meta Open Graph (للفيسبوك ووسائل التواصل) -->
+    <!-- Meta Open Graph  -->
     <meta property="og:title" content="نقل الأثاث في منطقة الخليج: دليل شامل وأهمية الشركات المتخصصة" />
     <meta property="og:description" content="دليل شامل عن خدمات نقل الأثاث في الخليج وأهمية الاعتماد على الشركات المتخصصة لتحقيق نقل آمن وسريع بدون عناء." />
     <meta property="og:type" content="article" />
