--- a/Blogs/index.html
+++ b/Blogs/index.html
@@ -140,7 +140,7 @@
             <!-- Moving Services Section -->
             <div class="blog-section">
                 <div class="section-header">
-                    <h3><i class="fas fa-truck ml-2"></i>خدمات نقل العفش</h3>
+                    <h3><i class="fas fa-truck ml-2"></i>  خدمات نقل العفش في الخليج – مشاريع احترافية مع تغليف وفك وتركيب متميز</h3>
                     <p>مشاريع نقل العفش المتميزة وقصص النجاح في جميع أنحاء الخليج</p>
                 </div>
                 <div class="cards-grid" id="movingCards">
@@ -151,7 +151,7 @@
             <!-- Cleaning Services Section -->
             <div class="blog-section">
                 <div class="section-header">
-                    <h3><i class="fas fa-broom ml-2"></i>خدمات التنظيف</h3>
+                    <h3><i class="fas fa-broom ml-2"></i> خدمات تنظيف احترافية للمنازل والمكاتب – أحدث تقنيات التنظيف في الخليج</h3>
                     <p>مشاريع التنظيف الشاملة والتقنيات الحديثة المستخدمة</p>
                 </div>
                 <div class="cards-grid" id="cleaningCards">
@@ -162,7 +162,7 @@
             <!-- Maintenance Services Section -->
             <div class="blog-section">
                 <div class="section-header">
-                    <h3><i class="fas fa-tools ml-2"></i>خدمات الصيانة</h3>
+                    <h3><i class="fas fa-tools ml-2"></i> خدمات صيانة شاملة – حلول فنية وتقنية للأعطال المنزلية والتجارية</h3>
                     <p>مشاريع الصيانة المتخصصة والحلول التقنية المبتكرة</p>
                 </div>
                 <div class="cards-grid" id="maintenanceCards">
