--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <div class="mobile-menu" id="mobileMenu">
         <div class="space-y-6">
             <a href="index.html" style=" color: #e8c468" class= "block text-petroleum hover:text-deep-petroleum transition-colors duration-300 text-lg font-medium py-3 border-b border-petroleum border-opacity-20">الرئيسية</a>
-            <a href="./our-services/index.html"style=" color: #e8c468" class="block text-rose-gold hover:text-warm-rose transition-colors duration-300 text-lg font-medium py-3 border-b border-petroleum border-opacity-20">شركاتنا</a>
-            <a href="./Blogs/index.html" style=" color: #e8c468" class="block text-charcoal hover:text-dark-charcoal transition-colors duration-300 text-lg font-medium py-3 border-b border-petroleum border-opacity-20">مدونة</a>
+            <a href="./our-services/index.html"style=" color: #e8c468" class="block text-rose-gold hover:text-warm-rose transition-colors duration-300 text-lg font-medium py-3 border-b border-petroleum border-opacity-20">خدماتنا</a>
+            <a href="./blogs/index.html" style=" color: #e8c468" class="block text-charcoal hover:text-dark-charcoal transition-colors duration-300 text-lg font-medium py-3 border-b border-petroleum border-opacity-20">مدونة</a>
             <a href="#about" style=" color: #e8c468" class="block text-silver-mist hover:text-pure-white transition-colors duration-300 text-lg font-medium py-3 border-b border-petroleum border-opacity-20"> من نحن</a>
         </div>
         <div class="mt-8">
@@ -123,8 +123,8 @@
                 
                 <div class="hidden lg:flex space-x-8 space-x-reverse">
                     <a href="index.html" class="nav-link active">الرئيسية</a>
-                    <a href="./our-services/index.html" class="nav-link">شركاتنا</a>
-                    <a href="./Blogs/index.html" class="nav-link"> مدونة </a>
+                    <a href="./our-services/index.html" class="nav-link">خدماتنا</a>
+                    <a href="./blogs/index.html" class="nav-link"> مدونة </a>
                     <a href="#about" class="nav-link"> من نحن</a>
                    
                 </div>
