change meta blogs and our-services and index.html

--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
    <link rel="icon" href="https://goldenmoonads.com/mainlogo.png" type="image/png">
    <!-- Basic Meta Tags -->
 
-<meta name="description" content="خدمات الخليج هي منصتك الشاملة للحصول على أفضل خدمات نقل الأثاث، التنظيف، الصيانة، والتكييف في السعودية ودول الخليج بجودة عالية وأسعار تنافسية.">
+    <meta name="description" content="خدمات الخليج هي منصتك الشاملة للحصول على أفضل خدمات نقل الأثاث، التنظيف، الصيانة، والتكييف في السعودية ودول الخليج بجودة عالية وأسعار تنافسية.">
 
-<!-- SEO Meta Tags -->
-<meta name="keywords" content="خدمات الخليج, نقل أثاث, تنظيف منازل, صيانة منازل, شركات تنظيف, صيانة كهرباء, نقل عفش, خدمات تكييف, خدمات منزلية في الخليج, خدمات بالسعودية, شركات خدمات">
-<meta name="author" content="خدمات الخليج">
- <link rel="canonical" href="https://gooldenmoon.com/index.html">
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:title" content="خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر">
-<meta property="og:description" content="منصة خدمات متكاملة تغطي السعودية ودول الخليج، تشمل خدمات النقل والتنظيف والصيانة والتكييف والمزيد.">
-<meta property="og:url" content="https://gooldenmoon.com/index.html"> 
-<meta property="og:site_name" content="خدمات الخليج">
+    <!-- SEO Meta Tags -->
+    <meta name="keywords" content="خدمات الخليج, نقل عفش, تنظيف منازل, صيانة مكيفات, شركات تنظيف, خدمات منزلية, خدمات في السعودية, خدمات الخليج العربي">
+    <meta name="author" content="خدمات الخليج">
+    <link rel="canonical" href="https://gooldenmoon.com/">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر">
+    <meta property="og:description" content="منصة خدمات متكاملة تغطي السعودية ودول الخليج، تشمل خدمات النقل والتنظيف والصيانة والتكييف والمزيد.">
+    <meta property="og:url" content="https://gooldenmoon.com/index.html"> 
+    <meta property="og:site_name" content="خدمات الخليج">
 
-<!-- Twitter Meta Tags -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر">
-<meta name="twitter:description" content="كل خدماتك المنزلية والتجارية تجدها هنا - سرعة، جودة، وأسعار تنافسية تغطي كافة مدن الخليج.">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="خدمات الخليج | كل ما تحتاجه من خدمات في مكان واحد - نقل، تنظيف، صيانة وأكثر">
+    <meta name="twitter:description" content="كل خدماتك المنزلية والتجارية تجدها هنا - سرعة، جودة، وأسعار تنافسية تغطي كافة مدن الخليج.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -32,10 +32,10 @@
   "description": "خدمات تنظيف، نقل، وصيانة منزلية فاخرة في الخليج العربي.",
   "areaServed": ["SA", "AE", "KW", "QA", "BH", "OM"],
   "telephone": "+966565265233",
-  "url": "https://gooldenmoon.com/",
-  
+  "url": "https://gooldenmoon.com/"
 }
 </script>
+
 
 
 <!-- Favicon -->
