--- a/our-services/index.html
+++ b/our-services/index.html
@@ -9,17 +9,17 @@
     <meta name="keywords" content="نقل عفش, نقل أثاث, نقل الأثاث في الرياض, خدمات نقل العفش, تغليف الأثاث, شركات نقل عفش بالرياض, نقل أثاث آمن, أسعار نقل العفش بالرياض">
     <meta name="author" content="خدمات الرياض لنقل العفش">
     <meta name="robots" content="index, follow">
-   <link rel="canonical" href="https://gooldenmoon.com/our-services/index.html">
+   <link rel="canonical" href="https://gooldenmoon.com/our-services/">
     <!-- Open Graph / Facebook / WhatsApp / Telegram -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://gooldenmoon.com/our-services/index.html">
+    <meta property="og:url" content="https://gooldenmoon.com/our-services/">
     <meta property="og:title" content="نقل الأثاث والعفش في الرياض - خدمة احترافية مع ضمان الأمان">
     <meta property="og:description" content="احصل على خدمة نقل الأثاث والعفش في الرياض مع تغليف احترافي ونقل آمن، أسعار مناسبة وخدمة عملاء راقية.">
     
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content=" our-services/index.html">
+    <meta name="twitter:url" content="https://gooldenmoon.com/our-services/">
     <meta name="twitter:title" content="نقل الأثاث والعفش في الرياض - خدمة احترافية مع ضمان الأمان">
     <meta name="twitter:description" content="خدمة متخصصة في نقل الأثاث والعفش بالرياض مع تغليف دقيق ونقل آمن، أسعار مميزة وضمان راحة العملاء.">
     
